# TinyGL

./: .gitignore  CMakeLists.txt  README.md
extras/: CMakeLists.txt
extras/fixmath/: fix16.c  fix16.h  fix16.hpp  int64.h
include/TinyGL/: gl.h  glu.h
source/: api.c  clip.c  get.c  glfixed.h  glu.c  image_util.c  light.c  matrix.c  ostinygl.c  specbuf.c  specbuf.h  vertex.c  zbuffer.h  zgl.h  zmath.c  zmath.h  ztriangle.c  ztriangle.h
